# migrate/20260401_postgres_server_target_vm_size.rb
@@ -1,0 +1,18 @@
+# frozen_string_literal: true
+
+Sequel.migration do
+  up do
+    alter_table(:postgres_server) do
+      add_column :target_vm_size, :text
+    end
+
+    from(:postgres_server)
+      .update(target_vm_size: from(:postgres_resource).where(id: :resource_id).select(:target_vm_size))
+  end
+
+  down do
+    alter_table(:postgres_server) do
+      drop_column :target_vm_size
+    end
+  end
+end
