# prog/postgres/converge_postgres_resource.rb
@@ -139,7 +139,7 @@ class Prog::Postgres::ConvergePostgresResource < Prog::Base
     # ready and recent servers (in that order)
     servers_to_keep = postgres_resource.servers
       .reject { it.is_representative || it.needs_recycling? || it.version != postgres_resource.target_version }
-      .sort_by { [(it.strand.label == "wait") ? 0 : 1, Time.now - it.created_at] }
+      .sort_by { [(it.strand.label == "wait") ? 0 : 1, it.on_intended_type? ? 0 : 1, -(it.vm.family[/\d+/].to_i), Time.now - it.created_at] }
       .take(postgres_resource.target_standby_count) + [postgres_resource.representative_server]
     servers_to_destroy = (postgres_resource.servers - servers_to_keep)
     servers_to_destroy.each(&:incr_destroy)
